--- a/health_potion/package.json
+++ b/health_potion/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "next": "12.1.6",
+    "npm": "^8.12.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "eslint": "8.16.0",
